# CH56X_CMake

./: CH56X.ld  CH56XSTARTUP.S  CMakeLists.txt  Readme.md
src/sys/: INT.c  SYSFREQ.c
